force-app/zurich-base/main/default/objects/Robot_Hegeo_Field_Mapping__mdt/Robot_Hegeo_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Robot Hegeo Field Mapping</label>
    <pluralLabel>Robot Hegeo Fields Mapping</pluralLabel>
</CustomObject>