force-app/zurich-base/main/default/objects/Robot_Hegeo_Field_Mapping__mdt/fields/GenesysQueue__c.field-meta.xml
<CustomField>
    <fullName>GenesysQueue__c</fullName>
    <label>GenesysQueue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>