force-app/zurich-base/main/default/objects/Robot_Hegeo_Field_Mapping__mdt/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Correspondiente a los diferentes campos para cada tipo en Salesforce</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type</fullName>
                <default>true</default>
                <label>Type</label>
            </value>
            <value>
                <fullName>Subtype__c</fullName>
            </value>
            <value>
                <fullName>TypeN3__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>