force-app/zurich-base/main/default/objects/Robot_Hegeo_Field_Mapping__mdt/fields/SalesforceValue__c.field-meta.xml
<CustomField>
    <fullName>SalesforceValue__c</fullName>
    <description>Api Name del valor picklist destino</description>
    <label>Salesforce Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>