force-app/zurich-base/main/default/objects/Robot_Hegeo_Field_Mapping__mdt/fields/SourceSubtype__c.field-meta.xml
<CustomField>
    <fullName>SourceSubtype__c</fullName>
    <label>Source Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>