force-app/zurich-base/main/default/objects/Robot_Hegeo_Field_Mapping__mdt/fields/SourceType__c.field-meta.xml
<CustomField>
    <fullName>SourceType__c</fullName>
    <label>Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>