force-app/zurich-base/main/default/objects/Robot_Hegeo_Field_Mapping__mdt/fields/SourceValue__c.field-meta.xml
<CustomField>
    <fullName>SourceValue__c</fullName>
    <description>Código / Literal Origen</description>
    <label>Source Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>