force-app/zurich-base/main/default/objects/Robot_Hegeo_Field_Mapping__mdt/fields/TypeN3__c.field-meta.xml
<CustomField>
    <fullName>TypeN3__c</fullName>
    <label>TypeN3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>