force-app/zurich-base/main/default/objects/Robot_Hegeo_Field_Mapping__mdt/listViews/All_Information.listView-meta.xml
<ListView>
    <fullName>All_Information</fullName>
    <columns>MasterLabel</columns>
    <columns>SourceType__c</columns>
    <columns>SourceSubtype__c</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>TypeN3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Information</label>
    <language>en_US</language>
</ListView>